HV-1882 Fix a few previously undetected uses of methods deprecated in JDK 17
Not sure why this wasn't detected before; probably because we were
running compiling tests to Java 8 bytecode.